# reactive-pydantic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: code-quality.yml  test.yml
examples/: advanced_usage.py  basic_usage.py
src/reactive_pydantic/: __init__.py  core.py  events.py  operators.py
tests/: test_advanced.py  test_comprehensive.py  test_models.py  test_performance.py
