[tool.poetry]
name = "reactive-pydantic"
version = "0.1.0"
description = "A library for creating reactive Pydantic models using RxPy."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/reactive-pydantic"
repository = "https://github.com/yourusername/reactive-pydantic"
keywords = ["pydantic", "reactive", "rxpy", "observables"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.0.0"
rx = "^3.0.1"
reactivex = "^4.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^21.7b0"
mypy = "^0.910"
flake8 = "^3.9.2"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"